# docpluck

./: .gitignore  CHANGELOG.md  CLAUDE.md  CUSTOMER_UPDATE_2026-06-19_tables_sections_api.md  HANDOFF_SECTIONS_APP_INTEGRATION.md  LESSONS.md  README.md  REPLY_FROM_DOCPLUCK_v1.4.5.md  REPLY_FROM_DOCPLUCK_v1.5.0.md  REPLY_FROM_DOCPLUCK_v2.4.93.md  REPLY_FROM_DOCPLUCK_v2.4.94.md  REPLY_FROM_DOCPLUCK_v2.4.95.md  REQUEST_08_CHUNKING_ENDPOINT.md  REQUEST_09_REFERENCE_LIST_NORMALIZATION.md  REQUEST_10_TABLE_FLATTEN_HTTP_EXPOSURE.md  REQUEST_10_TIER2_ORPHANED_LABEL_ROW_RECOVERY.md  REQUEST_11_FLATTEN_FIELDS_NONCLINICAL_TABLES.md  TODO.md  pyproject.toml
.github/workflows/: bump-app-pin.yml  publish.yml  test.yml
docpluck/: __init__.py  __init__.py.tmp.54476.1778653086029  batch.py  cli.py  extract.py  extract_columns.py  extract_docx.py  extract_html.py  extract_layout.py  extract_structured.py  normalize.py  quality.py  render.py  telemetry.py  version.py
docpluck/figures/: __init__.py  detect.py
docpluck/sections/: __init__.py  blocks.py  boundaries.py  core.py  taxonomy.py  types.py
docpluck/tables/: __init__.py  bbox_utils.py  camelot_extract.py  captions.py  cell_cleaning.py  cluster.py  confidence.py  detect.py  flatten.py  render.py  (+1 more)
docs/: BENCHMARKS.md  BENCHMARKS_liteparse_2026-06.md  DESIGN.md  FINDINGS_2026-07-01_chandrashekar_sidebyside_deinterleave.md  FINDINGS_2026-07-01_efendic_t2_and_collabra_pairing.md  FINDINGS_2026-07-01_parallel_session_verification.md  FINDINGS_2026-07-02_concurrent_session_reconciliation.md  HANDOFF_2026-05-07_sections_strict_iteration.md  HANDOFF_2026-05-09_session_state_and_followups.md  HANDOFF_2026-05-09_unified_extraction_brainstorm.md  HANDOFF_2026-05-10_table_rendering_iteration.md  HANDOFF_2026-05-10_table_rendering_iteration_2.md  HANDOFF_2026-05-10_table_rendering_iteration_3.md  HANDOFF_2026-05-10_table_rendering_iteration_4.md  HANDOFF_2026-05-10_table_rendering_iteration_5.md  HANDOFF_2026-05-10_table_rendering_iteration_6.md  HANDOFF_2026-05-10_table_rendering_iteration_7.md  HANDOFF_2026-05-11_PROMOTE_SPIKE_TO_LIBRARY.md  HANDOFF_2026-05-11_table_rendering_iteration_8.md  HANDOFF_2026-05-11_visual_review_findings.md  HANDOFF_2026-05-12_phase2_101pdf_corpus.md  HANDOFF_2026-05-12_remaining_ui_and_chrome_verification.md  HANDOFF_2026-05-12_visual_verify_results.md  HANDOFF_2026-05-13_apa_50_expansion.md  HANDOFF_2026-05-13_apa_50_expansion_iter_1.md  HANDOFF_2026-05-13_apa_50_expansion_iter_2.md  HANDOFF_2026-05-13_iterate_skill_first_use.md  HANDOFF_2026-05-13_iterative_1.md  HANDOFF_2026-05-13_iterative_library_improvement.md  HANDOFF_2026-05-13_table_extraction_next_iteration.md  HANDOFF_2026-05-14_continue_iterations_v2_4_30_to_15n.md  HANDOFF_2026-05-14_full_corpus_iteration_v2_4_30.md  HANDOFF_2026-05-14_iterate_6_cycles_complete.md  HANDOFF_2026-05-14_iterate_9_cycle_run.md  HANDOFF_2026-05-14_iterate_resume_4_cycles.md  HANDOFF_2026-05-14_iterate_v2_4_31_cycle_15n.md  HANDOFF_2026-05-14_phase_5d_gold_audit_v2_4_29.md  HANDOFF_2026-05-15_autonomous_apa_first_10h.md  HANDOFF_2026-05-15_iterate_apa_run_1.md  HANDOFF_2026-05-16_ai-gold-instructions.md  (+37 more)
scripts/: check_app_pin_sync.py  check_docs_consistency.py  lint_rendered_corpus.py  pretest_capture_tokens.py  verify_corpus.py  verify_corpus_full.py
tests/: conftest.py  test_a3c_leading_zero_decimal_real_pdf.py  test_a4_ci_period_to_comma.py  test_affiliation_heading_promote_guard_real_pdf.py  test_all_caps_section_promote_real_pdf.py  test_bbox_utils.py  test_benchmark_docx_html.py  test_cambridge_footer_strip_real_pdf.py  test_camelot_lattice_augment.py  test_camelot_temp_cleanup.py  test_canary_provenance.py  test_caption_only_table_heading_real_pdf.py  test_caption_regex.py  test_chart_data_trim_real_pdf.py  test_check_app_pin_sync.py  test_cid_minus_recovery_real_pdf.py  test_cli_sections.py  test_cli_structured.py  test_confidence.py  test_corpus_smoke.py  test_d5_normalization_audit.py  test_dropped_minus_ci_upper_recovery_real_pdf.py  test_dropped_minus_layout_recovery_real_pdf.py  test_edge_cases.py  test_elsevier_footer_strip_real_pdf.py  test_equation_page_header_strip_real_pdf.py  test_extract_columns.py  test_extract_docx.py  test_extract_filter_sugar.py  test_extract_html.py  test_extract_layout.py  test_extract_pdf_structured.py  test_extraction.py  test_f0_table_region_aware.py  test_fffd_comparison_recovery_real_pdf.py  test_figure_caption_trim_real_pdf.py  test_figure_detect.py  test_fixtures_manifest.py  test_hallucinated_heading_continuation_guard.py  test_harness_text_loss_reflow.py  (+83 more)
tools/: canary_provenance.py  fix_python_env.ps1  render_for_audit.py
(+158 files in other folders)
