[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docpluck"
version = "2.3.1"
description = "PDF, DOCX, and HTML text extraction and normalization for academic papers"
readme = "docs/README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Gilad Feldman", email = "giladfeld@gmail.com"},
]
keywords = [
    "pdf", "docx", "html", "extraction", "normalization", "academic",
    "statistics", "text-mining", "research", "psychology", "meta-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "pdfplumber>=0.11.0",
]

[project.optional-dependencies]
docx = ["mammoth>=1.8.0"]
html = ["beautifulsoup4>=4.12.0", "lxml>=5.0.0"]
all = ["mammoth>=1.8.0", "beautifulsoup4>=4.12.0", "lxml>=5.0.0"]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "rapidfuzz>=3",
    "anyio>=4",
    "pytest-anyio>=0.0.0",
    "mammoth>=1.8.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-docx>=1.0.0",
]

[project.scripts]
docpluck = "docpluck.cli:main"

[project.urls]
Homepage = "https://github.com/giladfeldman/docpluck"
Documentation = "https://github.com/giladfeldman/docpluck/tree/main/docs"
Repository = "https://github.com/giladfeldman/docpluck"
Issues = "https://github.com/giladfeldman/docpluck/issues"
Changelog = "https://github.com/giladfeldman/docpluck/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["docpluck"]
