[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docpluck"
version = "2.4.22"
description = "PDF, DOCX, and HTML text extraction and normalization for academic papers"
readme = "docs/README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Gilad Feldman", email = "giladfeld@gmail.com"},
]
keywords = [
    "pdf", "docx", "html", "extraction", "normalization", "academic",
    "statistics", "text-mining", "research", "psychology", "meta-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "pdfplumber>=0.11.0",
    # Camelot is the table-extraction engine (per memory
    # `project_camelot_for_tables` — settled 2026-05-09 after a 5-library
    # bake-off). [cv] extra pulls in opencv-python which Camelot's lattice
    # flavor needs for line detection. Without this dep, the `import camelot`
    # in tables/camelot_extract.py raises ImportError, the wrapper silently
    # returns [], and every detected table caption becomes kind='isolated'
    # with empty cells — exactly the v2.4.12 production regression.
    "camelot-py[cv]>=0.11.0",
    # Lattice flavor also needs Ghostscript at runtime — the system binary,
    # installed via Dockerfile (apt-get install ghostscript). Without it,
    # lattice silently fails and only the (often noisier) stream flavor
    # contributes to detection.
]

[project.optional-dependencies]
docx = ["mammoth>=1.8.0"]
html = ["beautifulsoup4>=4.12.0", "lxml>=5.0.0"]
all = ["mammoth>=1.8.0", "beautifulsoup4>=4.12.0", "lxml>=5.0.0"]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "rapidfuzz>=3",
    "anyio>=4",
    "pytest-anyio>=0.0.0",
    "mammoth>=1.8.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-docx>=1.0.0",
]

[project.scripts]
docpluck = "docpluck.cli:main"

[project.urls]
Homepage = "https://github.com/giladfeldman/docpluck"
Documentation = "https://github.com/giladfeldman/docpluck/tree/main/docs"
Repository = "https://github.com/giladfeldman/docpluck"
Issues = "https://github.com/giladfeldman/docpluck/issues"
Changelog = "https://github.com/giladfeldman/docpluck/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["docpluck"]
